.subheader-main-wrapped corrected padding

--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ body {
     text-align: center;
     vertical-align: middle;
 
-    padding: 10px 0; 
+    padding: 16px 0; 
 }
 
 /* === lOGO ==== */
